--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	<div class="service">
 		<div class="title">
 			<h2 id="Certifications"> Certifications</h2>
-			<img src= "/Users/redhak/Downloads/Certifications/Google Data Analytics Certificate.pdf" width="450" height="450">
+			<img src= "https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Google Data Analytics Certificate.pdf" width="450" height="450">
 			<img src ="/Users/redhak/Downloads/Rajalakshmi Data Analysis Internship Completion Certificate-1.pdf" width="450" height="450">
 			<img src ="/Users/redhak/Downloads/Certifications/Machine Learning in Python.pdf" width="450" height="450">
 			<img src="/Users/redhak/Downloads/Certifications/Data Cleaning and Preprocessing with pandas.pdf" width="450" height="450">
