--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 		<div class="title">
 			<h2 id="Certifications"> Certifications</h2>
 			<img src= "https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Google Data Analytics Certificate.pdf" width="450" height="450">
-			<img src ="/Users/redhak/Downloads/Rajalakshmi Data Analysis Internship Completion Certificate-1.pdf" width="450" height="450">
-			<img src ="/Users/redhak/Downloads/Certifications/Machine Learning in Python.pdf" width="450" height="450">
-			<img src="/Users/redhak/Downloads/Certifications/Data Cleaning and Preprocessing with pandas.pdf" width="450" height="450">
-			<img src="/Users/redhak/Downloads/Certifications/ Introduction to Business Analysis Using Spreadsheets- Basics.pdf" width="450" height="450">
-			<img src="/Users/redhak/Downloads/Certifications/Machine Learning with Naive Bayes.pdf" width="450" height="450">
-			<img src ="/Users/redhak/Downloads/Certifications/Machine Learning with K-Nearest Neighbors.pdf" width="450" height="450">
-			<img src="/Users/redhak/Downloads/Certifications/Introduction to Data Analysis using Microsoft Excel.pdf"width="450" height="450">
+			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Rajalakshmi Data Analysis Internship Completion Certificate-1.pdf" width="450" height="450">
+			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Certifications/Machine Learning in Python.pdf" width="450" height="450">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Certifications/Data Cleaning and Preprocessing with pandas.pdf" width="450" height="450">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Certifications/ Introduction to Business Analysis Using Spreadsheets- Basics.pdf" width="450" height="450">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Certifications/Machine Learning with Naive Bayes.pdf" width="450" height="450">
+			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Certifications/Machine Learning with K-Nearest Neighbors.pdf" width="450" height="450">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Certifications/Introduction to Data Analysis using Microsoft Excel.pdf"width="450" height="450">
 
 		</div>
 
