--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<!----About section start---->
 	<section class="about">
 		<div class="main">
-			<img src="/Users/redhak/Downloads/1325192.jpg">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/1325192.jpg">
 			<div class="about-text">
 				<h2 id="About">About</h2>
 				<h5>Data Analyst</span></h5>
@@ -114,7 +114,7 @@
 			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/ Introduction to Business Analysis Using Spreadsheets- Basics.pdf" width="450" height="450">
 			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Machine Learning with Naive Bayes.pdf" width="450" height="450">
 			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Machine Learning with K-Nearest Neighbors.pdf" width="450" height="450">
-			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Introduction to Data Analysis using Microsoft Excel.pdf"width="450" height="450">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Introduction to Data Analysis using Microsoft Excel.pdf" width="450" height="450">
 
 		</div>
 
