--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p> Skilled in SQL, Excel, Python, Tableau, 
                     Powerbi, Machine Learning Algorithms
                 </p>
-				<button onclick ="location.href='https://drive.google.com/file/d/1PnHETNSglMw20IqZwO8-CG4G0fDXcHaZ/view?usp=sharing'"" type="button">Resume</button>
+				<button onclick ="lhttps://drive.google.com/file/d/1ZwTZ9r4Ob1YV6_JCU8hVQ5HkU1I-4AGt/view?usp=sharing" type="button">Resume</button>
 				
 			</div>
 		</div>
