--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 			<div class="card">
 				<i class="far fa-search"></i>
-				<h5>COVID-19 Dashboard</h5>
+				<h5>COVID-19 World-Wide Dashboard</h5>
 				<div class="pra">
 					<p>Created an interactive dashboard in Tableau that highlights countries around the world 
 						based on the most cases.</p>
@@ -109,12 +109,12 @@
 			<h2 id="Certifications"> Certifications</h2>
 			<img src= "https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Google Data Analytics Certificate.pdf" width="500" height="500">
 			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Rajalakshmi Data Analysis Internship Completion Certificate-1.pdf" width="500" height="500">
-			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Machine Learning in Python.pdf" width="450" height="450">
-			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Data Cleaning and Preprocessing with pandas.pdf" width="450" height="450">
-			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/ Introduction to Business Analysis Using Spreadsheets- Basics.pdf" width="450" height="450">
-			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Machine Learning with Naive Bayes.pdf" width="450" height="450">
-			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Machine Learning with K-Nearest Neighbors.pdf" width="450" height="450">
-			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Introduction to Data Analysis using Microsoft Excel.pdf" width="450" height="450">
+			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Machine Learning in Python.pdf" width="500" height="500">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Data Cleaning and Preprocessing with pandas.pdf" width="500" height="500">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/ Introduction to Business Analysis Using Spreadsheets- Basics.pdf" width="500" height="500">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Machine Learning with Naive Bayes.pdf" width="500" height="500">
+			<img src ="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Machine Learning with K-Nearest Neighbors.pdf" width="500" height="500">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Certifications/Introduction to Data Analysis using Microsoft Excel.pdf" width="500" height="500">
 
 		</div>
 
