--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p> Skilled in SQL, Excel, Python, Tableau, 
                     Powerbi, Machine Learning Algorithms
                 </p>
-				<button onclick ="https://drive.google.com/file/d/1BurJGUNWGGQXGZxf24CEyhXKpseQIpcX/view?usp=sharing" type="button">Resume</button>
+				<button onclick ="location.href='https://drive.google.com/file/d/1BurJGUNWGGQXGZxf24CEyhXKpseQIpcX/view?usp=sharing'" type="button">Resume</button>
 				
 			</div>
 		</div>
