--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 	<footer>
 		<p>Social</p>
 		<div class="social">
-			<a button onclick="location.href='https://linkedin.com/in/rajalakshmik/' "type="button"><i class="fab fa-linkedin-in"></i></a>a>
-			<a button onclick="location.href='https://github.com/rajalakshmikr' "type="button"><i class="fab brands fa-github"></i></a>a>
+			<a button onclick="location.href='https://linkedin.com/in/rajalakshmik/' "type="button"><i class="fab fa-linkedin-in"></i></a>
+			<a button onclick="location.href='https://github.com/rajalakshmikr' "type="button"><i class="fab brands fa-github"></i></a>
 		</div>
 		<p class="end">CopyRight By Rajalakshmi K</p>
 	</footer>
