--- a/index.html
+++ b/index.html
@@ -27,8 +27,19 @@
 
 		<div class="content">
 			<h4 >Hello, my name is</h4>
-			<h1>Rajalakshmi <span>K</span></h1>
-			<h3>I'm an Aspiring Data Analyst.</h3>
+			<h1>Rajalakshmi</h1>
+			<h3>I am a Business Analyst with a robust educational background and 
+				extensive skill set. I hold a Bachelor of Engineering (BE) 
+				in Electronics and Communication Engineering (ECE) and a 
+				Master of Business Administration (MBA) in Business Analytics. 
+				My technical proficiency encompasses Advanced Excel, SQL, Python, 
+				Tableau, PowerBI, SPSS, and Machine Learning algorithms.
+				
+				In my professional journey, I have consistently demonstrated my 
+				capabilities as a detail-oriented and fast learner, leveraging my 
+				skills to deliver actionable business insights and drive data-informed 
+				decision-making. My ability to adapt quickly to new tools and methodologies 
+				has made me an invaluable asset in any analytical role.</h3>
 
 		</div>
 	</div>
