--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="content">
 			<h4 >Hello, my name is</h4>
 			<h1>Rajalakshmi</h1>
-			<h3>I am a Business Analyst with a robust educational background and 
+			<p>I am a Business Analyst with a robust educational background and 
 				extensive skill set. I hold a Bachelor of Engineering (BE) 
 				in Electronics and Communication Engineering (ECE) and a 
 				Master of Business Administration (MBA) in Business Analytics. 
@@ -39,7 +39,7 @@
 				capabilities as a detail-oriented and fast learner, leveraging my 
 				skills to deliver actionable business insights and drive data-informed 
 				decision-making. My ability to adapt quickly to new tools and methodologies 
-				has made me an invaluable asset in any analytical role.</h3>
+				has made me an invaluable asset in any analytical role.</p>
 
 		</div>
 	</div>
