--- a/index.html
+++ b/index.html
@@ -52,13 +52,18 @@
 				<h2 id="About">About</h2>
 				<h5>Data Analyst</span></h5>
 				<p>
-                    I'm a MBA Graduate specialized in Data Analysis
-                </p>
-                <p>Young & Energitic Data Analyst seeking for a challenging role in an organisation
-                     where my knowlege will be useful in the growth of the firm.
-                    </p>
-                <p> Skilled in SQL, Excel, Python, Tableau, 
-                    Powerbi, Machine Learning Algorithms
+                                 I am a Business Analyst with a robust educational background and 
+				extensive skill set. I hold a Bachelor of Engineering (BE) 
+				in Electronics and Communication Engineering (ECE) and a 
+				Master of Business Administration (MBA) in Business Analytics. 
+				My technical proficiency encompasses Advanced Excel, SQL, Python, 
+				Tableau, PowerBI, SPSS, and Machine Learning algorithms.</p>
+				<p>
+				In my professional journey, I have consistently demonstrated my 
+				capabilities as a detail-oriented and fast learner, leveraging my 
+				skills to deliver actionable business insights and drive data-informed 
+				decision-making. My ability to adapt quickly to new tools and methodologies 
+				has made me an invaluable asset in any analytical role.
                 </p>
 				<button onclick ="location.href='https://drive.google.com/file/d/1BurJGUNWGGQXGZxf24CEyhXKpseQIpcX/view?usp=sharing';" type="button">Resume</button>
 				
