--- a/index.html
+++ b/index.html
@@ -28,18 +28,10 @@
 		<div class="content">
 			<h4 >Hello, my name is</h4>
 			<h1>Rajalakshmi</h1>
-			<p>I am a Business Analyst with a robust educational background and 
-				extensive skill set. I hold a Bachelor of Engineering (BE) 
-				in Electronics and Communication Engineering (ECE) and a 
-				Master of Business Administration (MBA) in Business Analytics. 
-				My technical proficiency encompasses Advanced Excel, SQL, Python, 
-				Tableau, PowerBI, SPSS, and Machine Learning algorithms.
-				
-				In my professional journey, I have consistently demonstrated my 
-				capabilities as a detail-oriented and fast learner, leveraging my 
-				skills to deliver actionable business insights and drive data-informed 
-				decision-making. My ability to adapt quickly to new tools and methodologies 
-				has made me an invaluable asset in any analytical role.</p>
+			<h3>I am a Data Analyst with a passion for turning data into actionable insights. 
+				I bring a unique blend of technical expertise and strategic thinking to the table.
+			Known for my attention to detail and quick learning ability, I am dedicated to helping organizations 
+				make smarter, data-informed decisions.</h3>
 
 		</div>
 	</div>
