--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/1325192.jpg">
 			<div class="about-text">
 				<h2 id="About">About</h2>
-				<h5>Data Analyst</span></h5>
+				<h5>Business Analyst</span></h5>
 				<p>
                                  I am a Business Analyst with a robust educational background and 
 				extensive skill set. I hold a Bachelor of Engineering (BE) 
