--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 		<div class="content">
 			<h4 >Hello, my name is</h4>
 			<h1>Rajalakshmi</h1>
-			<h3>I am a Data Analyst with a passion for turning data into actionable insights. 
-				I bring a unique blend of technical expertise and strategic thinking to the table.
-			Known for my attention to detail and quick learning ability, I am dedicated to helping organizations 
-				make smarter, data-informed decisions.</h3>
+			<h3>Welcome to my portfolio. I am a passionate Data Analyst 
+				with a solid foundation in data science, statistical 
+				analysis, and business intelligence. I excel in data 
+				mining, predictive modeling, and visualization, transforming 
+				complex data into actionable insights.</h3>
 
 		</div>
 	</div>
