--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
 				My technical proficiency encompasses Advanced Excel, SQL, Python, 
 				Tableau, PowerBI, SPSS, and Machine Learning algorithms.</p>
 				<p>
-				In my professional journey, I have consistently demonstrated my 
-				capabilities as a detail-oriented and fast learner, leveraging my 
-				skills to deliver actionable business insights and drive data-informed 
-				decision-making. My ability to adapt quickly to new tools and methodologies 
-				has made me an invaluable asset in any analytical role.
+				In my professional journey, I have consistently demonstrated my capabilities 
+					as a detail-oriented and fast learner, leveraging my skills to deliver
+					actionable business insights and drive data-informed decision-making. I am 
+					currently working as a Business Analyst, where I apply my expertise to 
+					analyze complex data sets, provide valuable insights, and support 
+					strategic initiatives. My ability to adapt quickly to new tools 
+					and methodologies has made me an invaluable asset in any analytical role.
                 </p>
 				<button onclick ="location.href='https://drive.google.com/file/d/1BurJGUNWGGQXGZxf24CEyhXKpseQIpcX/view?usp=sharing';" type="button">Resume</button>
 				
