--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!----About section start---->
 	<section class="about">
 		<div class="main">
-			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/1325192.jpg">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Untitled 2.png">
 			<div class="about-text">
 				<h2 id="About">About</h2>
 				<h5>Business Analyst</span></h5>
