--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	<section class="about">
 		<div class="main">
 			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Untitled 2.png">
+			<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Untitled 3.png">
 			<div class="about-text">
 				<h2 id="About">About</h2>
 				<h5>Business Analyst</span></h5>
