--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="content">
 			<h4 >Hello, my name is</h4>
 			<h1>Rajalakshmi</h1>
-			<h3>Welcome to my portfolio. I am a passionate Data Analyst 
+			<h3>Welcome to my portfolio. I am a passionate Business/Data Analyst 
 				with a solid foundation in data science, statistical 
 				analysis, and business intelligence. I excel in data 
 				mining, predictive modeling, and visualization, transforming 
@@ -46,7 +46,7 @@
 				<h2 id="About">About</h2>
 				<h5>Business Analyst</span></h5>
 				<p>
-                                 I am a Business Analyst with a robust educational background and 
+                                 I am a Business/data analyst with a robust educational background and 
 				extensive skill set. I hold a Bachelor of Engineering (BE) 
 				in Electronics and Communication Engineering (ECE) and a 
 				Master of Business Administration (MBA) in Business Analytics. 
