--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 				in Electronics and Communication Engineering (ECE) and a 
 				Master of Business Administration (MBA) in Business Analytics. 
 				My technical proficiency encompasses Advanced Excel, SQL, Python, 
-				Tableau, PowerBI, SPSS, and Machine Learning algorithms.</p>
+				Tableau, PowerBI, SPSS, and Machine Learning algorithms.</p> </div>
+				<div class="about-text">
 				<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Untitled 3.png">
 				<p>
 				In my professional journey, I have consistently demonstrated my capabilities 
