--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 				in Electronics and Communication Engineering (ECE) and a 
 				Master of Business Administration (MBA) in Business Analytics. 
 				My technical proficiency encompasses Advanced Excel, SQL, Python, 
-				Tableau, PowerBI, SPSS, and Machine Learning algorithms.</p> </div>
-				<div class="about-text">
-				<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Untitled 3.png">
+				Tableau, PowerBI, SPSS, and Machine Learning algorithms.</p> 
+				
 				<p>
 				In my professional journey, I have consistently demonstrated my capabilities 
 					as a detail-oriented and fast learner, leveraging my skills to deliver
