--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 					analyze complex data sets, provide valuable insights, and support 
 					strategic initiatives. My ability to adapt quickly to new tools 
 					and methodologies has made me an invaluable asset in any analytical role.</div>
-					<div class="about-text"><img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Untitled 3.png">
-						</div>
+					<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Untitled 3.png">
                 </p>
 				<button onclick ="location.href='https://drive.google.com/file/d/1J3MgQeBZnOuLVWUVmsGwXk0gRLeYLDrB/view?usp=sharing';" type="button">Resume</button>
 				
