--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 					currently working as a Business Analyst, where I apply my expertise to 
 					analyze complex data sets, provide valuable insights, and support 
 					strategic initiatives. My ability to adapt quickly to new tools 
-					and methodologies has made me an invaluable asset in any analytical role.</div>
-					<img src="https://rajalakshmikr.github.io/RajalakshmiPortfolio/Untitled 3.png">
+					and methodologies has made me an invaluable asset in any analytical role.
+					
                 </p>
 				<button onclick ="location.href='https://drive.google.com/file/d/1J3MgQeBZnOuLVWUVmsGwXk0gRLeYLDrB/view?usp=sharing';" type="button">Resume</button>
 				
